--- a/contacts.html
+++ b/contacts.html
@@ -222,9 +222,10 @@
                   <dt>Skype</dt> <dd><a href="https://join.skype.com/invite/y7TQ6N4HCyFl" target="_blank" title=""><img src="img/skype.svg" alt="social skype"/></a></dd>
                   <dt>Telegram</dt> <dd><a href="tg://resolve?domain=vaoooglu" target="_blank" title=""><img src="img/contacts/10.svg"  alt="social telegram"/></a></dd>
                   <dt>WhatsApp</dt> <dd><a href="whatsapp://send?phone=+380955145609" target="_blank" title=""><img src="img/whatsapp.svg"  alt="social whatsapp" /></a></dd>
-                  <!-- <dt>Viber</dt> <dd><a href="viber://pa/info?uri=+380955145609" target="_blank" title=""><img src="img/viber.svg"  alt="social viber"/></a></dd> -->
-                  <!-- <dt>Viber</dt> <dd><a href="viber://public?id=+380955145609" target="_blank" title=""><img src="img/viber.svg"  alt="social viber"/></a></dd> -->
-                  <dt>Viber</dt> <dd><a href="viber://pa?chatURI=+380955145609&context=Привет&text=Есть вопрос" target="_blank" title=""><img src="img/viber.svg"  alt="social viber"/></a></dd>
+                  <dt>Viber</dt> <dd><a href="viber://add?number=3809555145609" target="_blank" title=""><img src="img/viber.svg"  alt="social viber"/></a></dd>
+                  <dt>Viber</dt> <dd><a href="viber://add?number=%2B3809555145609" target="_blank" title=""><img src="img/viber.svg"  alt="social viber"/></a></dd>
+                  <dt>Viber</dt> <dd><a href=" viber://chat?number=3809555145609" target="_blank" title=""><img src="img/viber.svg"  alt="social viber"/></a></dd>
+                  <dt>Viber</dt> <dd><a href=" viber://chat?number=%2B3809555145609" target="_blank" title=""><img src="img/viber.svg"  alt="social viber"/></a></dd>
                   <dt>LinkedIn</dt> <dd><a href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/" target="_blank" title=""><img src="img/contacts/6.svg"  alt="social linkedn"/></a></dd>
                   <dt>ВКонтакте</dt> <dd><a href="https://vk.com/vaoooglu" target="_blank" title=""><img src="img/contacts/9.svg"  alt="social vk"/></a></dd>
                   <dt>Facebook</dt> <dd><a href="https://www.facebook.com/vaoooglu" target="_blank" title=""><img src="img/contacts/1.svg"  alt="social facebook"/></a></dd>
