--- a/projects.html
+++ b/projects.html
@@ -227,10 +227,10 @@
               <h4><a href="https://vaoooglu.github.io/slipper/" rel="nofollow" target="_blank">Slipper</a> </h4>
               <h4><a href="http://wow-j.ru/land/" rel="nofollow" target="_blank">WOW - страницы организации вручения премии</a></h4>
               <h4><a href="http://blagovest-kms.ru/" rel="nofollow" target="_blank">Благовест (благотворительный фонд) - соц.проект></a></h4>
-              <h4><a href="http://atstone.kz/http://atstone.kz/" rel="nofollow" target="_blank">Каталог камня</a></h4>
+              <h4><a href="http://atstone.kz/" rel="nofollow" target="_blank">A.T.Stone</a></h4>
               <h4><a href="http://promo.crocusfitness.com/crocus-city" rel="nofollow" target="_blank">Страницы акций для сети залов Crocus Fitness</a></h4>
               <h4><a href="http://www.drivinglessonsdublin.ie/" rel="nofollow" target="_blank">Pinnacle driving school</a></h4>
-              
+              <h4><a href="http://oknagsd.by/" rel="nofollow" target="_blank">ООО "Гомель строй дизайн"</a></h4>
               <p>
                 Ниже Вы сможете найти ссылки на четыре<em> реализованных проекта</em>, где я закончил все этапы: концепт, разработку и реализацию.
               </p>
